Update relic location extension descriptions

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                             <span class="tooltip-indicator">?</span>
                             <span class="tooltip hidden">
                               <span>
-                                Relics may appear in rooms guarded by bosses.
+                                Relics and progression items may appear in rooms
+                                guarded by bosses.
                               </span>
                             </span>
                           </span>
@@ -117,7 +118,8 @@
                             <span class="tooltip-indicator">?</span>
                             <span class="tooltip hidden">
                               <span>
-                                Relics may appear in place of equipment tiles.
+                                Relics and progression items may appear in place of
+                                equipment tiles.
                               </span>
                             </span>
                           </span>
@@ -134,8 +136,9 @@
                             <span class="tooltip-indicator">?</span>
                             <span class="tooltip hidden">
                               <span>
-                                Relics will only be randomized among the game's
-                                original relic locations.
+                                Relics and progression items will only be randomized
+                                among the game's original relic and progression item
+                                locations.
                               </span>
                             </span>
                           </span>
