--- a/index.html
+++ b/index.html
@@ -271,6 +271,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>June 22, 2020</time></h3>
+      <ul>
+        <li>Add Jewel of Open + Soul of Wolf + Leap Stone as Gold Ring location lock for Speedrun preset.</li>
+      </ul>
       <h3><time>June 3, 2020</time></h3>
       <ul>
         <li>Fix duped progression item in Cave.</li>
