--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                       <span class="tooltip-indicator">?</span>
                       <span class="tooltip hidden">
                         <span>
-                          Lower complexities generate faster but may be easier to
-                          beat.
+                          Lower complexities generate faster but may be easier
+                          to beat.
                         </span>
                       </span>
                     </span>
@@ -84,6 +84,14 @@
                     <label for="prologue-rewards">Prologue rewards</label>
                   </div>
                   <div class="pure-u-12-24">
+                    <input id="music" type="checkbox">
+                    <label for="music">Music</label>
+                  </div>
+                  <div class="pure-u-12-24">
+                    <input id="turkey-mode" type="checkbox">
+                    <label for="turkey-mode">Turkey mode</label>
+                  </div>
+                  <div class="pure-u-12-24">
                     <fieldset id="relic-locations-set">
                       <legend>
                         <input id="relic-locations" type="checkbox">
@@ -100,8 +108,8 @@
                             <span class="tooltip-indicator">?</span>
                             <span class="tooltip hidden">
                               <span>
-                                Relics and progression items may appear in rooms
-                                guarded by bosses.
+                                Relics and progression items may appear in
+                                rooms guarded by bosses.
                               </span>
                             </span>
                           </span>
@@ -118,8 +126,8 @@
                             <span class="tooltip-indicator">?</span>
                             <span class="tooltip hidden">
                               <span>
-                                Relics and progression items may appear in place of
-                                equipment tiles.
+                                Relics and progression items may appear in
+                                place of equipment tiles.
                               </span>
                             </span>
                           </span>
@@ -136,19 +144,15 @@
                             <span class="tooltip-indicator">?</span>
                             <span class="tooltip hidden">
                               <span>
-                                Relics and progression items will only be randomized
-                                among the game's original relic and progression item
-                                locations.
+                                Relics and progression items will only be
+                                randomized among the game's original relic
+                                and progression item locations.
                               </span>
                             </span>
                           </span>
                         </label>
                       </div>
                     </fieldset>
-                  </div>
-                  <div class="pure-u-12-24">
-                    <input id="turkey-mode" type="checkbox">
-                    <label for="turkey-mode">Turkey mode</label>
                   </div>
                   <input id="enemy-drops-arg"
                          type="text"
