Fix some browser bugs

--- a/index.html
+++ b/index.html
@@ -553,6 +553,7 @@
     <script src="util.js"></script>
     <script src="randomize_relics.js"></script>
     <script src="randomize_items.js"></script>
+    <script src="randomize_music.js"></script>
     <script src="build/presets/casual.js"></script>
     <script src="build/presets/safe.js"></script>
     <script src="build/presets/adventure.js"></script>
