--- a/index.html
+++ b/index.html
@@ -275,6 +275,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>August 7, 2020</time></h3>
+      <ul>
+        <li>Make Leap Stone a 0-relic check in Speedrun preset.</li>
+      </ul>
       <h3><time>July 27, 2020</time></h3>
       <ul>
         <li>Add music randomizer.</li>
