--- a/index.html
+++ b/index.html
@@ -567,6 +567,7 @@
     <script src="build/presets/adventure.js"></script>
     <script src="build/presets/speedrun.js"></script>
     <script src="build/presets/glitch.js"></script>
+    <script src="build/presets/scavenger.js"></script>
     <script src="build/presets/empty-hand.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="worker.js"></script>
