Add tournament mode

--- a/index.html
+++ b/index.html
@@ -202,6 +202,10 @@
                 <label for="append-seed">Append seed to filename</label>
               </div>
               <div class="pure-u-1">
+                <input id="tournament-mode" type="checkbox">
+                <label for="tournament-mode">Tournament mode</label>
+              </div>
+              <div class="pure-u-1">
                 <input id="show-spoilers" type="checkbox">
                 <label for="show-spoilers">Show spoilers</label>
               </div>
