--- a/index.html
+++ b/index.html
@@ -279,6 +279,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>September 19, 2020</time></h3>
+      <ul>
+        <li>Add Tournament Mode.</li>
+      </ul>
       <h3><time>August 11, 2020</time></h3>
       <ul>
         <li>Add Scavenger preset.</li>
