Fix relic distribution table

--- a/relics/index.html
+++ b/relics/index.html
@@ -9,10 +9,10 @@
       <div id="progress"></div>
     </div>
     <div id="content"></div>
-    <script src="/constants.js"></script>
-    <script src="/extension.js"></script>
-    <script src="/relics.js"></script>
-    <script src="/util.js"></script>
+    <script src="/src/constants.js"></script>
+    <script src="/src/extension.js"></script>
+    <script src="/src/relics.js"></script>
+    <script src="/src/util.js"></script>
     <script src="/build/presets/casual.js"></script>
     <script src="/build/presets/safe.js"></script>
     <script src="/relics/index.js"></script>
