--- a/index.html
+++ b/index.html
@@ -279,6 +279,11 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>January 18, 2021</time></h3>
+      <ul>
+        <li>Add Thrust Sword logic to Speedrun preset.</li>
+        <li>Increase minimum complexities for Safe and Adventure presets.</li>
+      </ul>
       <h3><time>September 19, 2020</time></h3>
       <ul>
         <li>Add Tournament Mode.</li>
