Fix typo in faq

--- a/faq/index.html
+++ b/faq/index.html
@@ -20,7 +20,7 @@
               Zoe</a> for candles to drop items.</p>
           <h3>Why does generating a seed take so long?</h3>
           <p>It's complicated. It also depends on which platform you're using.
-            The best performance is acheived by running the
+            The best performance is achieved by running the
             <code>randomize</code> utility from command line
             (see <a href="https://github.com/3snowp7im/SotN-Randomizer#cli">
               github repository</a> for info).</p>
@@ -43,12 +43,13 @@
               this tool</a>.</p>
           <p>If you've checked the solutions and verified you're using a
             vanilla rip of the game, you might have found a bug. Please fill
-            out the appropriate <a href="https://github.com/3snowp7im/SotN-Randomizer/issues/new/choose">bug report template</a>, or post your seed in the <code>#randomizer</code> channel in <a href="https://discord.gg/wGMdDRG">The
-              Long Library</a>.</p>
+            out the appropriate <a href="https://github.com/3snowp7im/SotN-Randomizer/issues/new/choose">bug
+              report template</a>, or post your seed in the <code>#randomizer</code>
+            channel in <a href="https://discord.gg/wGMdDRG">The Long Library</a>.</p>
           <h3>Do I need to know any glitches in order to complete a seed?</h3>
           <p>The only time you are expected to perform glitches in order to
             complete a seed is when using the "Glitch" preset.
-            Aside from that, no glitches are required to beat seeds.</p>
+            Aside from that, no glitches are required.</p>
           <h3>The infinite peanut isn't randomized. Is this on purpose?</h3>
           <p>Yes.</p>
         </div>
