Add Trio as possible relic location

--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
       <h1>Castlevania: Symphony of the Night Randomizer</h1>
       <div>
         by Wild Mouse
-        <a class="contact" href="https://twitter.com/3snow_p7im"><img height="16" width="16" src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitter.svg"></a>
-        <a class="contact" href="https://twitch.tv/3snow_p7im"><img height="16" width="16" src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitch.svg"></a>
+        <a class="contact" href="https://twitter.com/3snow_p7im">
+          <img height="16" width="16"
+               src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitter.svg">
+        </a>
+        <a class="contact" href="https://twitch.tv/3snow_p7im">
+          <img height="16" width="16"
+               src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitch.svg"></a>
       </div>
       <form id="form" class="pure-g">
         <div id="target" class="pure-u-1">
@@ -267,15 +272,17 @@
       <h2><a name="links">Links</a></h2>
       <ul>
         <li><a href="/faq">FAQ</a></li>
-        <li><a href="https://github.com/TalicZealot/SotN-Relic-Tracker">Relic Tracker [Lua version]</a> (thanks TalicZealot)</li>
-        <li><a href="relics">Relic distribution table</a> (thanks Soba)</li>
+        <li><a href="https://github.com/TalicZealot/SotN-Relic-Tracker">Relic
+            Tracker [Lua version]</a> (thanks TalicZealot)</li>
         <li><a href="https://discord.gg/wGMdDRG">The Long Library</a>, a SotN
           discord server with a dedicated <code>#randomizer</code> channel</li>
       </ul>
       <hr>
       <h2><a name="bugs">Bugs</a></h2>
       <p>
-        Think you found a bug? The best way to report it is using <a href="https://github.com/3snowp7im/SotN-Randomizer/issues/new/choose">GitHub issues</a>.
+        Think you found a bug? Make sure you read the <a href="/faq">FAQ</a>
+        before reporting. The best way to report a bug is by using
+        <a href="https://github.com/3snowp7im/SotN-Randomizer/issues/new/choose">GitHub issues</a>.
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
@@ -302,11 +309,13 @@
       </ul>
       <h3><time>July 10, 2020</time></h3>
       <ul>
-        <li>Fix escape requirements not being honored when a location is empty.</li>
+        <li>Fix escape requirements not being honored when a location is
+          empty.</li>
       </ul>
       <h3><time>June 22, 2020</time></h3>
       <ul>
-        <li>Add Jewel of Open + Soul of Wolf + Leap Stone as Gold Ring location lock for Speedrun preset.</li>
+        <li>Add Jewel of Open + Soul of Wolf + Leap Stone as Gold Ring
+          location lock for Speedrun preset.</li>
       </ul>
       <h3><time>June 3, 2020</time></h3>
       <ul>
@@ -448,7 +457,8 @@
         <ul>
           <li>Add support for custom enemy drops, starting equipment, item
             locations, and prologue rewards.</li>
-          <li>Deprecate relic logic selector in favor of <a href="https://github.com/3snowp7im/SotN-Randomizer#presets">presets</a>.</li>
+          <li>Deprecate relic logic selector in favor of
+            <a href="https://github.com/3snowp7im/SotN-Randomizer#presets">presets</a>.</li>
         </ul>
         <h3><time>May 11, 2019</time></h3>
         <ul>
@@ -482,12 +492,9 @@
         <ul>
           <li>Add candle randomization.</li>
           <li>Add prologue reward item randomization.</li>
-          <li>Add Axe Lord and Luck Mode starting equipment randomization.</li>
+          <li>Add Axe Lord and Luck Mode starting equipment
+            randomization.</li>
           <li>Add copy seed button.</li>
-        </ul>
-        <h3><time>April 15, 2019</time></h3>
-        <ul>
-          <li>Add link to the <a href="https://testrunnersrl.github.io/sotn-tracker/">relic tracker</a> (thanks TestRunner)</li>
         </ul>
         <h3><time>April 15, 2019</time></h3>
         <ul>
@@ -510,7 +517,8 @@
         <h3><time>April 8, 2019</time></h3>
         <ul>
           <li>Fix bug that allowed salable gems to be sold in shop menu.</li>
-          <li>Items are now placed by type with same frequency as vanilla.</li>
+          <li>Items are now placed by type with same frequency as
+            vanilla.</li>
         </ul>
         <h3><time>April 7, 2019</time></h3>
         <ul>
@@ -561,7 +569,9 @@
         </ul>
         <h3><time>March 27, 2019</time></h3>
         <ul>
-          <li>Ported setz's <a href="https://github.com/josephstevenspgh/SotN-Relic-Randomizer">relic randomizer</a> to javascript.</li>
+          <li>Ported setz's
+            <a href="https://github.com/josephstevenspgh/SotN-Relic-Randomizer">relic randomizer</a>
+            to javascript.</li>
         </ul>
       </div>
     </div>
