--- a/index.html
+++ b/index.html
@@ -286,6 +286,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>February 7, 2021</time></h3>
+      <ul>
+        <li>Add Trio as a possible relic location in Guarded and Equipment extensions.</li>
+      </ul>
       <h3><time>January 18, 2021</time></h3>
       <ul>
         <li>Add Thrust Sword logic to Speedrun preset.</li>
