--- a/index.html
+++ b/index.html
@@ -641,6 +641,7 @@
     <script src="build/presets/casual.js"></script>
     <script src="build/presets/safe.js"></script>
     <script src="build/presets/adventure.js"></script>
+    <script src="build/presets/og.js"></script>
     <script src="build/presets/speedrun.js"></script>
     <script src="build/presets/glitch.js"></script>
     <script src="build/presets/scavenger.js"></script>
