--- a/index.html
+++ b/index.html
@@ -319,6 +319,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>March 12, 2021</time></h3>
+      <ul>
+        <li>Add O.G. preset.</li>
+      </ul>
       <h3><time>February 27, 2021</time></h3>
       <ul>
         <li>Add item stats randomization.</li>
