--- a/index.html
+++ b/index.html
@@ -319,6 +319,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>April 1, 2021</time></h3>
+      <ul>
+        <li>Adjust market rates.</li>
+      </ul>
       <h3><time>March 12, 2021</time></h3>
       <ul>
         <li>Add O.G. preset.</li>
@@ -650,6 +654,7 @@
     <script src="build/presets/glitch.js"></script>
     <script src="build/presets/scavenger.js"></script>
     <script src="build/presets/empty-hand.js"></script>
+    <script src="build/presets/april-fools.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
