Add gem farmer preset

--- a/index.html
+++ b/index.html
@@ -319,9 +319,9 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
-      <h3><time>April 1, 2021</time></h3>
+      <h3><time>April 2, 2021</time></h3>
       <ul>
-        <li>Adjust market rates.</li>
+        <li>Add Gem Farmer preset.</li>
       </ul>
       <h3><time>March 12, 2021</time></h3>
       <ul>
@@ -654,7 +654,7 @@
     <script src="build/presets/glitch.js"></script>
     <script src="build/presets/scavenger.js"></script>
     <script src="build/presets/empty-hand.js"></script>
-    <script src="build/presets/april-fools.js"></script>
+    <script src="build/presets/gem-farmer.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
