--- a/index.html
+++ b/index.html
@@ -319,6 +319,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>April 27, 2021</time></h3>
+      <ul>
+        <li>Reject disc images that are not valid, vanilla backups.</li>
+      </ul>
       <h3><time>April 2, 2021</time></h3>
       <ul>
         <li>Add Gem Farmer preset.</li>
