Add rando tools to links section

--- a/index.html
+++ b/index.html
@@ -304,9 +304,13 @@
         <li><a href="https://ppf.sotn.io">PPF Patcher
             [Browser version]</a></li>
         <li><a href="https://github.com/TalicZealot/SotN-Relic-Tracker">Relic
-            Tracker [Lua version]</a> (thanks TalicZealot)</li>
+            Tracker [Lua version]</a></li>
+        <li><a href="https://github.com/TalicZealot/SotnRandoTools">Rando
+            Tools</a>, a collection of tools to enhance the randomizer
+          experience.</li>
         <li><a href="https://discord.gg/wGMdDRG">The Long Library</a>, a SotN
-          discord server with a dedicated <code>#randomizer</code> channel</li>
+          discord server with a dedicated <code>#randomizer</code>
+          channel.</li>
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
