--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
       <h2><a name="links">Links</a></h2>
       <ul>
         <li><a href="/faq">FAQ</a></li>
-        <li><a href="https://github.com/TalicZealot/SotnRandoTools">Rando
+        <li><a href="https://taliczealot.github.io">Rando
             Tools</a>, a collection of tools to enhance the randomizer
           experience.</li>
         <li><a href="https://ppf.sotn.io">PPF Patcher
