--- a/faq/index.html
+++ b/faq/index.html
@@ -41,16 +41,37 @@
             has received progression items, between 1 and 3 items have been
             removed from some areas.</p>
           <h3>What is the difference between the Casual and Safe presets?</h3>
-          <p>Casual uses the Classic location extension. Safe uses the
-            Guarded location extension. See the
-            <a href="#extensions">question regarding location extensions</a>
-            for more information.</p>
+          <p>Casual seeds have a lower average complexity (usually 5 or 6)
+            than Safe seeds (usually 10 or 11). Therefore, on average, Casual
+            seeds take less time to complete than Safe seeds. See the
+            <a href="#complexity">question regarding complexity</a> for more
+            information.</p>
           <h3>What is the difference between the Safe and Adventure
             presets?</h3>
           <p>Safe uses the Guarded location extension. Adventure uses the
             Equipment location extension. See the
             <a href="#extensions">question regarding location extensions</a>
             for more information.</p>
+          <h3 id="complexity">What is complexity?</h3>
+          <p>A seed's complexity is the depth of its a progression tree. A
+            progression tree describes the order in which relics and items are
+            accessed.</p>
+          <p>For example, in the vanilla game, Jewel of Open is the
+            roots of the tree as it's the first progression relic the player
+            receives. Jewel of Open allows the player to receive Leap Stone.
+            Leap Stone allows the player to receive Form of Mist. Form of Mist
+            allows the player to receive Soul of Bat. Soul of Bat allows the
+            player to receive Echo of Bat. And so forth, until you reach the
+            leaves of the tree (the five pieces of Vlad).<p>
+          <p>The complexity of the tree is the number of levels between roots
+            and leaves. It's a bit like counting the number of times "allows
+            the player to receive" occurs when writing out the progression tree
+            in English. In case you're curious, the complexity of the vanilla
+            game is 11.</p>
+          <p>When adjusting the complexity target for your seed on sotn.io, you
+            are actually setting the <em>minimum</em> complexity. Your seed's
+            complexity may end up being higher than the number you selected,
+            but never lower.</p>
           <h3 id="extensions">What are the Classic, Guarded, and Equipment
             location extensions?</h3>
           <p>These options adjust the pool of possible relic locations. Classic
