--- a/index.html
+++ b/index.html
@@ -312,6 +312,10 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>Map 17, 2021</time></h3>
+      <ul>
+        <li>Use Guarded relic locations for Casual preset.</li>
+      </ul>
       <h3><time>April 27, 2021</time></h3>
       <ul>
         <li>Reject disc images that are not valid, vanilla backups.</li>
