--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
-      <h3><time>Map 17, 2021</time></h3>
+      <h3><time>May 17, 2021</time></h3>
       <ul>
         <li>Use Guarded relic locations for Casual preset.</li>
       </ul>
