Update discord link

--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
           experience.</li>
         <li><a href="https://ppf.sotn.io">PPF Patcher
             [Browser version]</a></li>
-        <li><a href="https://discord.gg/wGMdDRG">The Long Library</a>, a SotN
-          discord server with a dedicated <code>#randomizer</code>
+        <li><a href="https://discord.gg/dzbKhQDjrs">The Long Library</a>,
+          a SotN discord server with a dedicated <code>#randomizer</code>
           channel.</li>
       </ul>
       <hr>
