Code cleanup, add UI elements and CLI support for spread relic locations extension.

--- a/index.html
+++ b/index.html
@@ -148,6 +148,24 @@
                         </label>
                       </div>
                       <div>
+                        <input id="extension-spread"
+                               name="extension"
+                               type="radio"
+                               value="spread">
+                        <label for="extension-spread">
+                          Spread
+                          <span class="tooltip-wrapper">
+                            <span class="tooltip-indicator">?</span>
+                            <span class="tooltip hidden">
+                              <span>
+                                Add to guarded locations with more checks on
+                                left side of second castle.
+                              </span>
+                            </span>
+                          </span>
+                        </label>
+                      </div>
+                      <div>
                         <input id="extension-equipment"
                                name="extension"
                                type="radio"
@@ -312,6 +330,11 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>December 13, 2021</time></h3>
+      <ul>
+        <li>Add Spread relic locations extension.</li>
+        <li>Add Bat Master preset.</li>
+      </ul>
       <h3><time>May 17, 2021</time></h3>
       <ul>
         <li>Use Guarded relic locations for Casual preset.</li>
@@ -651,6 +674,7 @@
     <script src="build/presets/adventure.js"></script>
     <script src="build/presets/og.js"></script>
     <script src="build/presets/speedrun.js"></script>
+    <script src="build/presets/bat-master.js"></script>
     <script src="build/presets/glitch.js"></script>
     <script src="build/presets/scavenger.js"></script>
     <script src="build/presets/empty-hand.js"></script>
