--- a/index.html
+++ b/index.html
@@ -673,6 +673,7 @@
     <script src="build/presets/safe.js"></script>
     <script src="build/presets/adventure.js"></script>
     <script src="build/presets/og.js"></script>
+    <script src="build/presets/guarded-og.js"></script>
     <script src="build/presets/speedrun.js"></script>
     <script src="build/presets/bat-master.js"></script>
     <script src="build/presets/glitch.js"></script>
