--- a/index.html
+++ b/index.html
@@ -330,6 +330,10 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>February 24, 2022</time></h3>
+      <ul>
+        <li>Fix stat randomization for club weapons.</li>
+      </ul>
       <h3><time>January 11, 2022</time></h3>
       <ul>
         <li>Add Guarded O.G. preset.</li>
