Add Brazil citizenship simulator

--- a/index.html
+++ b/index.html
@@ -319,17 +319,19 @@
       <h2><a name="links">Links</a></h2>
       <ul>
         <li><a href="/faq">FAQ</a></li>
-        <li><a href="https://taliczealot.github.io">Rando
-            Tools</a>, a collection of tools to enhance the randomizer
-          experience.</li>
-        <li><a href="https://ppf.sotn.io">PPF Patcher
-            [Browser version]</a></li>
+        <li><a href="https://taliczealot.github.io">Rando Tools</a>,
+          a collection of tools to enhance the randomizer experience.</li>
+        <li><a href="https://ppf.sotn.io">PPF Patcher [Browser version]</a></li>
         <li><a href="https://discord.gg/dzbKhQDjrs">The Long Library</a>,
           a SotN discord server with a dedicated <code>#randomizer</code>
           channel.</li>
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>April 1, 2022</time></h3>
+      <ul>
+        <li>Add Brazilian citizenship simulator.</li>
+      </ul>
       <h3><time>February 24, 2022</time></h3>
       <ul>
         <li>Fix stat randomization for club weapons.</li>
@@ -688,6 +690,7 @@
     <script src="build/presets/scavenger.js"></script>
     <script src="build/presets/empty-hand.js"></script>
     <script src="build/presets/gem-farmer.js"></script>
+    <script src="build/presets/third-castle.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
