Add third castle preset

--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
-      <h3><time>April 1, 2022</time></h3>
+      <h3><time>April 2, 2022</time></h3>
       <ul>
-        <li>Add Brazilian citizenship simulator.</li>
+        <li>Add Third Castle preset.</li>
       </ul>
       <h3><time>February 24, 2022</time></h3>
       <ul>
