Add Nimble preset

--- a/index.html
+++ b/index.html
@@ -686,6 +686,7 @@
     <script src="build/presets/guarded-og.js"></script>
     <script src="build/presets/speedrun.js"></script>
     <script src="build/presets/bat-master.js"></script>
+    <script src="build/presets/nimble.js"></script>
     <script src="build/presets/glitch.js"></script>
     <script src="build/presets/scavenger.js"></script>
     <script src="build/presets/empty-hand.js"></script>
