--- a/index.html
+++ b/index.html
@@ -328,6 +328,10 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>April 20, 2022</time></h3>
+      <ul>
+        <li>Add Nimble preset.</li>
+      </ul>
       <h3><time>April 2, 2022</time></h3>
       <ul>
         <li>Add Third Castle preset.</li>
