--- a/index.html
+++ b/index.html
@@ -690,7 +690,9 @@
     <script src="build/presets/guarded-og.js"></script>
     <script src="build/presets/speedrun.js"></script>
     <script src="build/presets/bat-master.js"></script>
+    <script src="build/presets/lycanthrope.js"></script>
     <script src="build/presets/nimble.js"></script>
+    <script src="build/presets/expedition.js"></script>
     <script src="build/presets/glitch.js"></script>
     <script src="build/presets/scavenger.js"></script>
     <script src="build/presets/empty-hand.js"></script>
