--- a/index.html
+++ b/index.html
@@ -328,6 +328,10 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>July 20, 2022</time></h3>
+      <ul>
+        <li>Add Warlock preset.</li>
+      </ul>
       <h3><time>July 9, 2022</time></h3>
       <ul>
         <li>Add Expedition preset.</li>
